gvfs-mount: Abort login if EOF is received

When reading a username, password or domain from the user, abort the
login process if EOF is received. This eases scripting gvfs-mount
and prevents an infinite loop with some backends.

https://bugzilla.gnome.org/show_bug.cgi?id=742942